@@ -43,6 +43,7 @@ Daniel Polanco (dlpolanco)
 Denis Protivenskiy
 Dennis Hamester
 dikiy
+Diogo Lemos (dmlemos)
 Dmitry Frank (dimonomid)
 eco0414
 Egor Gumenyuk (boo1ean)
