@@ -113,6 +113,9 @@
 	Fixed wrapped lines in quickview/view mode sometimes loosing their
 	colorization.
 
+	Fixed occasional test failures due to use of uninitialized curses.  Thanks
+	to Diogo Lemos (a.k.a. dmlemos).
+
 0.10-beta to 0.10 (2018-11-11)
 
 	Display list of files in removal confirmation dialog.  Thanks to ovk.
